syntax = "proto3";

package immo;

option go_package = "./immo";

service ImmoService {
  rpc DiscoverNode(NodeRequest) returns (NodeResponse);
  rpc AddNode(NodeRequest) returns (NodeResponse);
  rpc ListNodes(ListRequest) returns (ListResponse);
  rpc RemoveNode(NodeRequest) returns (RemoveResponse);
}

message NodeRequest {
  string name = 1;
  string address = 2;
}

message SensorResponse {
  int64 id = 1;
  string name = 2;
  string topic = 3;
}

message ActuatorResponse {
  int64 id = 1;
  string name = 2;
  string topic = 3;
}

message NodeResponse {
  int64 id = 1;
  string name = 2;
  repeated SensorResponse sensor = 3;
  repeated ActuatorResponse actuator = 4;
  string error = 5;
}

message RemoveResponse {
  bool status = 1;
  string error = 2;
}

message ListResponse {
  repeated NodeResponse nodes = 1;
}

message ListRequest {}